fixed align drop menu

--- a/src/less/sections/nav-menu.less
+++ b/src/less/sections/nav-menu.less
@@ -75,8 +75,7 @@
 	background-color: @white;
 }
 .nav-menu-links__dropmenu-item {
-	padding-left: 25px;
-	padding-right: 25px;
+	text-align: center;
 	padding-top: 20px;
 	padding-bottom: 17px;
 	&:hover {
